[package]
name = "xunit_repo"
version = "0.0.1"
authors = ["Owen Synge <osynge@googlemail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
actix-web = "3"
actix-rt = "1.1.1"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4.26"
uuid = { version = "0.8", features = ["serde", "v4"] }
xunit-repo-interface = { git = "https://github.com/osynge/xunit-repo-interface.git", branch = "main" }
xunit_repo_db = { git = "https://github.com/osynge/xunit-repo-db.git", branch = "main" }
#xunit_repo_db = { path = "../xunit-repo-db" }
diesel_migrations = "2.1.0"
clap = "2"
log = "*"
thiserror = "*"
toml = "*"
dirs = "*"
actix-files = "0.3"
# only for static compilation for minimal docker builds
libsqlite3-sys = { version = "*", features = ["bundled"], optional=true}
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.25"
tracing-actix-web = "0.2.1"
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
tracing-appender = "0.1.2"
actix-web-prom = "0.5"

# Layered configuration.
converge = "0.0.4"

[dev-dependencies]
tempdir = "0.3"

# Env configuration.
envy = "0.4"
